# RuleHawk

./: .gitignore  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: selftest.yml
docs/: github-action.md  index.html  policy.md  worker.js
docs/rulehawk/: analyze.py  cli.py  gate.py  model.py  parse.py  parse_eos.py  parse_iptables.py  parse_junos.py  parse_nxos.py  parse_panos.py  report.py  segcheck.py
rulehawk/: __init__.py  analyze.py  cli.py  model.py  parse.py  parse_iptables.py  parse_junos.py  pathground.py  report.py  segcheck.py
samples/: adv_asa_netmask.txt  adv_deny_narrow.txt  adv_established.txt  adv_icmp.txt  adv_neq.txt  adv_neq_fp.txt  adv_realistic.txt  adv_union_shadow.txt  ios_acl.txt  iptables_save.txt  policy.json
scripts/: check_vendor_sync.py  measure_pathground.py
scripts/corpus/: policy_corp_pci.json
scripts/corpus/ten_router_acl/: hub-r1.cfg  hub-r2.cfg  hub-r3.cfg  hub-r4.cfg  hub-r5.cfg  isle-r1.cfg  isle-r2.cfg  isle-r3.cfg  isle-r4.cfg  isle-r5.cfg
tests/: test_analyze.py  test_audit_fixes.py  test_finding_line.py  test_fixes.py  test_gate.py  test_hosted_import_closure.py  test_hosted_parity.py  test_objgroup_partial_precision.py  test_objgroup_resolution.py  test_parse_eos.py  test_parse_iptables.py  test_parse_junos.py  test_parse_nxos.py  test_parse_panos.py  test_pathground.py  test_pathground_corpus.py  test_report_notes.py  test_segcheck.py  test_svc_objgroup_partial_precision.py  test_svc_port_precision.py  test_union_shadow.py  test_vendor_sync.py
