[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rulehawk"
version = "0.1.0"
description = "Self-serve firewall/ACL hygiene & segmentation auditor (IOS/ASA)"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = []

[project.scripts]
rulehawk = "rulehawk.cli:main"

[tool.setuptools]
packages = ["rulehawk"]
